--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #c8defa;
+  background-color: #BDD3EB;
 }
 
 :root {
